Apply OpenRewrite Java17 migration